--- a/app/src/main/res/layout/training_exercise_search_row.xml
+++ b/app/src/main/res/layout/training_exercise_search_row.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="@dimen/activity_listview_vertical_margin"
     android:paddingLeft="@dimen/activity_listview_horizontal_margin"
     android:paddingRight="@dimen/activity_listview_horizontal_margin"
-    tools:context="com.brus5.lukaszkrawczak.fitx.Training.TrainingExcerciseListActivity">
+    tools:context="com.brus5.lukaszkrawczak.fitx.Training.TrainingListActivity">
 
 
     <android.support.constraint.ConstraintLayout
