--- a/app/src/main/res/menu/menu_training_exercise_add.xml
+++ b/app/src/main/res/menu/menu_training_exercise_add.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.brus5.lukaszkrawczak.fitx.Training.TrainingExerciseShowActivity">
+    tools:context="com.brus5.lukaszkrawczak.fitx.Training.TrainingDetailsActivity">
     <item
         android:id="@+id/menu_save_exercise"
         android:icon="@drawable/icon_accept"
