--- a/app/src/main/res/layout/training_details_add_row.xml
+++ b/app/src/main/res/layout/training_details_add_row.xml
@@ -2,6 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,22 +18,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTrainingRowWeight"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:ems="10"
-        android:gravity="center_horizontal"
-        android:hint="@string/weight_short"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintStart_toEndOf="@+id/guideline2"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
         android:id="@+id/editTextTrainingRowReps"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -42,10 +28,31 @@
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="@string/reps_short"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
+        android:selectAllOnFocus="true"
+        android:nextFocusDown="@+id/editTextTrainingRowWeight"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTrainingRowWeight"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:hint="@string/weight_short"
+        android:inputType="numberDecimal"
+        android:nextFocusRight="@id/editTextTrainingRowReps"
+        android:selectAllOnFocus="true"
+        app:layout_constraintEnd_toStartOf="@+id/guideline3"
+        app:layout_constraintStart_toEndOf="@+id/guideline2"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline2"
